--- a/gallery/assets/css/custom.css
+++ b/gallery/assets/css/custom.css
@@ -4,9 +4,7 @@ html {
 }
 
 .thumb-img {
-  box-shadow: 0 0 2px 1px rgba(0, 0, 0, .15) !important;
   border-color: #F5E3D6 !important;
-  border-width: 0.00 !important;
 }
 
 #loupeContainer div.background {
@@ -20,7 +18,7 @@ header div.background {
 }
 
 .custom-colorable {
-  fill: #702706 !important;
+  fill: #5F1616 !important;
 }
 
 body {
